NDS-497 update type fixes on text input docs

--- a/docs/pages/components/text-input.mdx
+++ b/docs/pages/components/text-input.mdx
@@ -189,9 +189,9 @@ Add hint text to the group of text inputs to give context or help about the over
 ### Asking complex questions
 
 If you're asking complex questions that needs a detailed explanation, don't use hint text, instead use:
-- A heading that's a statement (for example, "Interview needs") rather than a question.
-- whatever mix of text, paragraphs, lists and examples best explains your question to the user.
-- a label, above the form input, tahts asks users a specific question &ndash; for example, &apos;Do you have any interview needs?&apos;
+- a heading that's a statement (for example, "Interview needs") rather than a question
+- whatever mix of text, paragraphs, lists and examples best explains your question to the user
+- a label, above the form input, tahts asks users a specific question &ndash; for example, &apos;Do you have any interview needs?&apos;.
 
 
 ## Error messages
@@ -240,7 +240,7 @@ Do not clear any form fields when showing the error message. Keep both passing a
 Keeping information thats caused the errors helps users to:
 - see what went wrong
 - edit their previous answer
-- avoid re-entering information
+- avoid re-entering information.
 
 
 {/* TODO: add grouped error state content and examples once added to DS.
@@ -253,7 +253,7 @@ An error message should only display when someone tries to move to the next part
 Do not show error messages:
 - when users select or tab to a field
 - when users type into a field
-- when they move away from a field
+- when they move away from a field.
 
 
 ## Accessibility
