NDS-497 fix typos and update entities

--- a/docs/pages/components/text-input.mdx
+++ b/docs/pages/components/text-input.mdx
@@ -189,9 +189,9 @@ Add hint text to the group of text inputs to give context or help about the over
 ### Asking complex questions
 
 If you're asking complex questions that needs a detailed explanation, don't use hint text, instead use:
-- a heading that's a statement (for example, "Interview needs") rather than a question
-- whatever mix of text, paragraphs, lists and examples best explains your question to the user
-- a label, above the form input, tahts asks users a specific question &ndash; for example, &apos;Do you have any interview needs?&apos;.
+- a heading that's a statement (for example, &#8216;Interview needs&#8217;) rather than a question
+- whatever mix of text, paragraphs, lists and examples best explains your question to the users
+- a label, above the form input, that asks users a specific question &#8211; for example, &#8216;Do you have any interview needs?&#8217;.
 
 
 ## Error messages
@@ -230,14 +230,14 @@ Error messages are displayed like this:
 </Example>
 
 {/* TODO: remove comment when new error border styles are implemented.
- We use a red border to visually connext the text input, error message and question it belongs to.
+ We use a red border to visually connect the text input, error message and question it belongs to.
 */}
 
 The error message appears in red after the question text and any hint text.
 
 Do not clear any form fields when showing the error message. Keep both passing and failing answers.
 
-Keeping information thats caused the errors helps users to:
+Keeping information that caused the errors helps users to:
 - see what went wrong
 - edit their previous answer
 - avoid re-entering information.
@@ -245,7 +245,9 @@ Keeping information thats caused the errors helps users to:
 
 {/* TODO: add grouped error state content and examples once added to DS.
 ### Errors in grouped inputs
-Text inputs in a group use the same error state - individual input questions are highlighted. For example, an address fieldset with multiple inputs with error states will look like this: */}
+Text inputs in a group use the same error state - individual input questions are highlighted. For example, an address fieldset with multiple inputs with error states will look like this:
+	[Add grouped input error demo here]
+*/}
 
 ### When not to use error messages
 An error message should only display when someone tries to move to the next part of the form or service.
@@ -267,7 +269,7 @@ Component meets WCAG AA guidelines for accessibility on:
 
 ## Research/evidence
 
-We tested the text input component on a "Identity and Access Management" prototype in April 2019. Users understood the purpose of the text input and were able to use it.
+We tested the text input component on a &#8220;Identity and Access Management&#8221; prototype in April 2019. Users understood the purpose of the text input and were able to use it.
 
 ## Help improve this page
 
@@ -277,7 +279,7 @@ To help make sure that this page is useful, relevant and up to date, you can:
 
 
 ## Need help?
-If you've got a question aboyut the NICE Design System, content the team.
+If you've got a question about the NICE Design System, content the team.
 - If you work for NICE [ask us a question in out Teams channel](https://teams.microsoft.com/l/team/19%3aj3x65ql6djS-Ro2mM8yQIRzK_QHOk1S3Jl75got7hwk1%40thread.tacv2/conversations?groupId=10c92ff2-b41f-42d1-abef-f34f5bfe1202&tenantId=6030f479-b342-472d-a5dd-740ff7538de9)
 - If you work outside of NICE, you can [get in touch with us via Github discussions](https://github.com/nice-digital/nice-design-system/discussions)
 
