NDS-497 typo fix

--- a/docs/pages/components/text-input.mdx
+++ b/docs/pages/components/text-input.mdx
@@ -60,7 +60,7 @@ Users often need to copy and paste information into a text input, so do not stop
 Multiple related text inputs will use the [Form group component](/components/form-group).
 The form group:
 -  wraps the inputs in a `<fieldset>` with a `<legend>` that describes the group
--  allows you to add hint etxt that applies to the entire group.
+-  allows you to add hint text that applies to the entire group.
 
 <Example>
 <h3>Example: grouped text inputs</h3>
