NDS-497 update wording from doc

--- a/docs/pages/components/text-input.mdx
+++ b/docs/pages/components/text-input.mdx
@@ -16,7 +16,7 @@ Use a text input when you need users to enter text that's no longer than a singl
 
 ## When not use
 
-Do not use a text input if you need users to enter longer answers that might span several lines. In this case, use a [textarea](/components/textarea).
+Do not use a text input if you need users to enter longer answers that might span several lines. In this case, use the [textarea](/components/textarea).
 
 ## How to use
 
@@ -58,6 +58,7 @@ Users often need to copy and paste information into a text input, so do not stop
 ## Grouped text inputs
 
 Multiple related text inputs will use the [Form group component](/components/form-group).
+
 The form group:
 -  wraps the inputs in a `<fieldset>` with a `<legend>` that describes the group
 -  allows you to add hint text that applies to the entire group.
@@ -250,7 +251,7 @@ Text inputs in a group use the same error state - individual input questions are
 */}
 
 ### When not to use error messages
-An error message should only display when someone tries to move to the next part of the form or service.
+Only display an error when someone tries to move to the next part of the form or service.
 
 Do not show error messages:
 - when users select or tab to a field
