--- a/docs/pages/components/text-input.mdx
+++ b/docs/pages/components/text-input.mdx
@@ -1,13 +1,13 @@
 import { ComponentLayout } from "components/layouts/ComponentLayout";
 import { Example } from "components/examples/Example";
-import { DefaultInput, ErrorInput, HintInput } from "components/examples/Input";
+import { DefaultInputExample, DefaultInput, ErrorInput, HintInput, GroupedInputs, GroupedInputHints } from "components/examples/Input";
 
 export const meta = {
 	title: "Text input",
 	description: "The text input lets users enter a single line of text.",
 	npmUrl: "https://www.npmjs.com/package/@nice-digital/nds-input",
 	gitHubUrl: "https://github.com/nice-digital/nice-design-system/blob/main/components/nds-input",
-	component: DefaultInput
+	component: DefaultInputExample
 };
 
 ## When to use
@@ -16,7 +16,7 @@ Use a text input when you need users to enter text that's no longer than a singl
 
 ## When not use
 
-Do not use a text input if you need users to enter longer answers that might span several lines. In this case, use a textarea.
+Do not use a text input if you need users to enter longer answers that might span several lines. In this case, use the [textarea](/components/textarea).
 
 ## How to use
 
@@ -45,18 +45,84 @@ Do not use a text input if you need users to enter longer answers that might spa
 
 Give text input a visible label.
 
-Do not use placeholder text for a label, as it vanishes when users click on the text input.
+Do not use placeholder text for a label, it vanishes when users click on the text input and not all screen readers read it out.
 
 Align labels above the text inputs they refer to on screen. Labels should be short, direct and written using sentence case. Do not use colons at the end of labels.
 
-If you are asking just 1 question per page, as we recommend, you can set the contents of the `label` as the page heading. It is good practice as it means that screen reader users will only hear the contents once.
+If you are asking just [one question per page](https://design-system.service.gov.uk/patterns/question-pages/#start-by-asking-one-question-per-page), as we recommend, you can set the contents of the `label` as the page heading. It is good practice as it means that screen reader users will only hear the contents once.
+
+### Do not disable copy and paste
+
+Users often need to copy and paste information into a text input, so do not stop them from doing this.
+
+## Grouped text inputs
+
+Multiple related text inputs will use the [Form group component](/components/form-group).
+
+The form group:
+-  wraps the inputs in a `<fieldset>` with a `<legend>` that describes the group
+-  allows you to add hint text that applies to the entire group.
+
+<Example>
+<h3>Example: grouped text inputs</h3>
+<GroupedInputs/>
+
+<CH.Code>
+```js React
+<FormGroup legend="What is your address">
+	<Input label="Address line 1" name="address-line-1" />
+	<Input label="Address line 2" name="address-line-2" />
+	<Input label="Town or city" name="address-town" />
+	<Input label="County" name="address-county" />
+	<Input label="Postcode" name="address-postcode" />
+</FormGroup>
+```
+```html HTML
+<fieldset class="form-group" data-component="form-group">
+	<legend class="form-group__legend">What is your address</legend>
+	<div class="input" data-component="input">
+		<label class="input__label" for="address-line-1">Address line 1</label>
+		<input name="address-line-1" class="input__input" id="address-line-1" type="text" value="" />
+	</div>
+	<div class="input" data-component="input">
+		<label class="input__label" for="address-line-2">Address line 2</label>
+		<input name="address-line-2" class="input__input" id="address-line-2" type="text" value="" />
+	</div>
+	<div class="input" data-component="input">
+		<label class="input__label" for="address-town">Town or city</label>
+		<input name="address-town" class="input__input" id="address-town" type="text" value="" />
+	</div>
+	<div class="input" data-component="input">
+		<label class="input__label" for="address-county">County</label>
+		<input name="address-county" class="input__input" id="address-county" type="text" value="" />
+	</div>
+	<div class="input" data-component="input">
+		<label class="input__label" for="address-postcode">Postcode</label>
+		<input name="address-postcode" class="input__input" id="address-postcode" type="text" value="" />
+	</div>
+</fieldset>
+```
+</CH.Code>
+</Example>
+
 
 ## Using hint text
 
-Use hint text to give users help in context; for example, only enter your first name.
+Use hint text to give users help in context; for example, enter your full address, including postcode.
 
+Keep hint text short and simple.
+
+Do not use links in the hint text.  While screen readers will read out the link text when describing the item, they usually do not tell users the text is a link.
+
+Hint text can be added to both:
+- An individual text input.
+- The overall group of inputs in the form group.
+
+### Individual input hint text
+
+Add hint text to individual text inputs to provide additional context or help.
 <Example>
-<h2>Example: input with a hint</h2>
+<h4>Example: input with a hint</h4>
 <HintInput />
 
 <CH.Code>
@@ -73,10 +139,68 @@ Use hint text to give users help in context; for example, only enter your first 
 </CH.Code>
 </Example>
 
+
+### Grouped inputs hint text
+
+Add hint text to the group of text inputs to give context or help about the overall group.
+<Example>
+<h4>Example: Grouped inputs with a hint</h4>
+<GroupedInputHints />
+
+<CH.Code>
+```js React
+<FormGroup legend="What is your address" hint="This should be a UK address">
+	<Input label="Address line 1" name="address-line-1-hint" />
+	<Input label="Address line 2" name="address-line-2-hint" />
+	<Input label="Town or city" name="address-town-hint" />
+	<Input label="County" name="address-county-hint" />
+	<Input label="Postcode" name="address-postcode-hint" />
+</FormGroup>
+```
+```html HTML
+<fieldset class="form-group" data-component="form-group">
+	<legend class="form-group__legend">What is your address</legend>
+	<p class="form-group__hint">This should be a UK address</p>
+	<div class="input" data-component="input">
+		<label class="input__label" for="address-line-1-hint">Address line 1</label>
+		<input name="address-line-1-hint" class="input__input" id="address-line-1-hint" type="text" value="">
+	</div>
+	<div class="input" data-component="input">
+		<label class="input__label" for="address-line-2-hint">Address line 2</label>
+		<input name="address-line-2-hint" class="input__input" id="address-line-2-hint" type="text" value="">
+	</div>
+	<div class="input" data-component="input">
+		<label class="input__label" for="address-town-hint">Town or city</label>
+		<input name="address-town-hint" class="input__input" id="address-town-hint" type="text" value="">
+	</div>
+	<div class="input" data-component="input">
+		<label class="input__label" for="address-county-hint">County</label>
+		<input name="address-county-hint" class="input__input" id="address-county-hint" type="text" value="">
+	</div>
+	<div class="input" data-component="input">
+		<label class="input__label" for="address-postcode-hint">Postcode</label>
+		<input name="address-postcode-hint" class="input__input" id="address-postcode-hint" type="text" value="">
+	</div>
+</fieldset>
+```
+</CH.Code>
+</Example>
+
+
+### Asking complex questions
+
+If you're asking complex questions that needs a detailed explanation, don't use hint text, instead use:
+- a heading that's a statement (for example, &#8216;Interview needs&#8217;) rather than a question
+- whatever mix of text, paragraphs, lists and examples best explains your question to the users
+- a label, above the form input, that asks users a specific question &#8211; for example, &#8216;Do you have any interview needs?&#8217;.
+
+
 ## Error messages
 
+Error messages are displayed like this:
+
 <Example>
-<h2>Example: input with error</h2>
+<h3>Example: input with error</h3>
 <ErrorInput />
 
 <CH.Code>
@@ -106,23 +230,58 @@ Use hint text to give users help in context; for example, only enter your first 
 </CH.Code>
 </Example>
 
-## When to use an error message
+{/* TODO: remove comment when new error border styles are implemented.
+ We use a red border to visually connect the text input, error message and question it belongs to.
+*/}
 
-Show an error message using the hint text when there is a validation error.
+The error message appears in red after the question text and any hint text.
 
-Use standard messages for different components.
+Do not clear any form fields when showing the error message. Keep both passing and failing answers.
+
+Keeping information that caused the errors helps users to:
+- see what went wrong
+- edit their previous answer
+- avoid re-entering information.
+
+
+{/* TODO: add grouped error state content and examples once added to DS.
+### Errors in grouped inputs
+Text inputs in a group use the same error state - individual input questions are highlighted. For example, an address fieldset with multiple inputs with error states will look like this:
+	[Add grouped input error demo here]
+*/}
+
+### When not to use error messages
+Only display an error when someone tries to move to the next part of the form or service.
+
+Do not show error messages:
+- when users select or tab to a field
+- when users type into a field
+- when they move away from a field.
+
 
 ## Accessibility
 
 Component meets WCAG AA guidelines for accessibility on:
 
-- Text contrast - Text has a contrast ratio of at least 4.5:1 for small text and at least 3:1 for large text (WCAG 2.0 )1.4.3).
-- UI contrast - Visual information required to identify components and states (except inactive components) has a contrast ratio of at least 3:1 (WCAG 2.1 1.4.11).
-- Accessible use of colour - Colour is not used as the only visual means of conveying information (WCAG 2.0 1.4.1).
+- Text contrast - Text has a contrast ratio of at least 4.5:1 for small text and at least 3:1 for large text (WCAG 2.2 - 1.4.3).
+- UI contrast - Visual information required to identify components and states (except inactive components) has a contrast ratio of at least 3:1 (WCAG 2.2 - 1.4.11).
+- Accessible use of colour - Colour is not used as the only visual means of conveying information (WCAG 2.2 - 1.4.1).
+
 
 ## Research/evidence
 
-We tested the textarea component on a "Identity and Access Management" prototype in April 2019. Users understood the purpose of the textarea and were able to use it.
+We tested the text input component on a &#8220;Identity and Access Management&#8221; prototype in April 2019. Users understood the purpose of the text input and were able to use it.
 
+## Help improve this page
+
+To help make sure that this page is useful, relevant and up to date, you can:
+- [Share your research or feedback on Github](https://github.com/nice-digital/nice-design-system/discussions)
+- [Propose a change](https://github.com/nice-digital/nice-design-system/discussions/categories/ideas)
+
+
+## Need help?
+If you've got a question about the NICE Design System, content the team.
+- If you work for NICE [ask us a question in out Teams channel](https://teams.microsoft.com/l/team/19%3aj3x65ql6djS-Ro2mM8yQIRzK_QHOk1S3Jl75got7hwk1%40thread.tacv2/conversations?groupId=10c92ff2-b41f-42d1-abef-f34f5bfe1202&tenantId=6030f479-b342-472d-a5dd-740ff7538de9)
+- If you work outside of NICE, you can [get in touch with us via Github discussions](https://github.com/nice-digital/nice-design-system/discussions)
 
 export default ({ children }) => <ComponentLayout meta={meta}>{children}</ComponentLayout>;
